# translate_project

./: pyproject.toml
traducao_articles_azure_ai/: __init__.py  main.py
